--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cuberto - Clone</title>
-    <link
-    href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
-    rel="stylesheet"
-/>
-<link rel="stylesheet" href="./style.css">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" rel="stylesheet" />
+    <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
     <div class="main">
 
-        <!-- <div class="home">
+        <div class="home">
             <div class="nav">
                 <img src="./images/cuberto-logo-vector.png" alt="" width="100">
                 <div class="right">
@@ -34,29 +33,52 @@
                 <p>Leading digital agency with solid design and development <br> expertise. We build readymade Websites, mobile <br>applications, and elaborate online business serives.</p>
             </div>
             
-        </div> -->
+        </div>
 
         <div class="featured">
             <div class="feature-heading">
                 <h1>Featured</h1>
                 <h1>Project</h1>
             </div>
-            
+
             <div class="featured-images">
                 <div class="fleft">
                     <div class="fleft-elem">
                         <h3>Riyadh</h3>
                         <h1>Official website of Riyadh, Saudi Arabia's capital</h1>
+                        <h4>design, development, product</h4>
                     </div>
-                    <div class="fleft-elem"></div>
-                    <div class="fleft-elem"></div>
-                    <div class="fleft-elem"></div>
+                    <div class="fleft-elem">
+                        <h3>Riyadh</h3>
+                        <h1>Official website of Riyadh, Saudi Arabia's capital</h1>
+                        <h4>design, development, product</h4>
+                    </div>
+                    <div class="fleft-elem">
+                        <h3>Riyadh</h3>
+                        <h1>Official website of Riyadh, Saudi Arabia's capital</h1>
+                        <h4>design, development, product</h4>
+                    </div>
+                    <div class="fleft-elem">
+                        <h3>Riyadh</h3>
+                        <h1>Official website of Riyadh, Saudi Arabia's capital</h1>
+                        <h4>design, development, product</h4>
+                    </div>
                 </div>
                 <div class="fright">
                     <div class="images"></div>
                 </div>
             </div>
+
+            <div class="btn">
+                <button>View all products</button>
+            </div>
+        </div>
+
+        <div class="dev">
+            <h1>Development and design resources</h1>
+            <p>We regularly release design courses, offer advice tp newbie designers, ealk you through creating awesome effects, and share source files.</p>
         </div>
     </div>
 </body>
+
 </html>
