--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
                 </div>
             </div>
             <div class="home-last">
-                <p>Leading digital agency with solid design and development <br> expertise. We build readymade Websites, mobile <br>applications, and elaborate online business serives.</p>
+                <p>Leading digital agency with solid design and development <br> expertise. We build readymade Websites,
+                    mobile <br>applications, and elaborate online business serives.</p>
             </div>
-            
+
         </div>
 
         <div class="featured">
@@ -76,7 +77,37 @@
 
         <div class="dev">
             <h1>Development and design resources</h1>
-            <p>We regularly release design courses, offer advice tp newbie designers, ealk you through creating awesome effects, and share source files.</p>
+            <p>We regularly release design courses, offer advice tp newbie designers, ealk you through creating awesome
+                effects, and share source files.</p>
+        </div>
+
+        <div class="slides">
+            <div class="slide">
+                <div class="img">
+                    <img src="./images/slide1.png" alt="">
+                </div>
+                <div class="tag">Design Course</div>
+                <h3>How To Make Epic Websites // Frontend development</h3>
+            </div>
+            <div class="slide">
+                <div class="img">
+                    <img src="./images/slide1.png" alt="">
+                </div>
+                <div class="tag">Design Course</div>
+                <h3>How To Make Epic Websites // Frontend development</h3>
+            </div>
+            <div class="slide">
+                <div class="img">
+                    <img src="./images/slide1.png" alt="">
+                </div>
+                <div class="tag">Design Course</div>
+                <h3>How To Make Epic Websites // Frontend development</h3>
+            </div>
+
+        </div>
+
+        <div class="btn">
+            <button>View all products</button>
         </div>
     </div>
 </body>
